Fix bottom align bug. Transparent line

--- a/app/styles/edit.less
+++ b/app/styles/edit.less
@@ -3,7 +3,7 @@
 
     &:nth-of-type(@{n}) {
         top: 36px * (@n - 1);
-        bottom: 36px * (4 - @n);
+        bottom: 36px * (4 - @n) - 1;
     }
 }
 
